--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,1 +1,37 @@
+name: Update Satellite GeoJSON
+
+permissions:
+  contents: write
+
+on:
+  schedule:
+    - cron: "0 * * * *"
+  workflow_dispatch:
+
+jobs:
+  update:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install Python libraries
+        run: pip install -r requirements.txt
+
+      - name: Generate GeoJSON files
+        run: python generate_all_geojson.py
+
+      - name: Commit and push
+        run: |
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions"
+          git add -A
+          git commit -m "Auto update GeoJSON" || echo "No changes"
+          git push
 
