--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,11 +1,11 @@
-name: Update Satellite GeoJSON
+name: Update GP Satellite GeoJSON
 
 permissions:
   contents: write
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 * * * *"    # every hour
   workflow_dispatch:
 
 jobs:
@@ -21,17 +21,16 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install Python libraries
+      - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Generate GeoJSON files
+      - name: Generate GeoJSON
         run: python generate_all_geojson.py
 
-      - name: Commit and push
+      - name: Commit & Push
         run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
           git add -A
-          git commit -m "Auto update GeoJSON" || echo "No changes"
-          git push
-
+          git commit -m "Auto update GP satellite GeoJSON" || echo "No changes"
+          git push || echo "Push skipped"
