--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,4 @@
-name: Update Satellite GP GeoJSON
-
-permissions:
-  contents: write
+name: Update Satellite GeoJSON
 
 on:
   schedule:
@@ -13,26 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        pip install requests sgp4
 
-      - name: Generate GeoJSONs
-        run: python generate_all_geojson.py
+    - name: Generate GeoJSON
+      run: python generate_all_geojson.py
 
-      - name: Commit & Push
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git add -A
-          git commit -m "Auto update satellite GP GeoJSON" || echo "No changes"
-          git push || echo "Push skipped"
+    - name: Commit & Push
+      run: |
+        git config --global user.name "github-actions"
+        git config --global user.email "github-actions@github.com"
+        git add output/*.geojson
+        git commit -m "Automatic update" || echo "No changes"
+        git push
