--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,36 +1,36 @@
 name: Update Satellite GeoJSON
 
-permissions:
-  contents: write
-
 on:
   schedule:
     - cron: "0 * * * *"   # every hour
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
-  update:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        pip install requests sgp4
+      - name: Install dependencies
+        run: pip install sgp4 requests
 
-    - name: Generate GeoJSON
-      run: python generate_all_geojson.py
+      - name: Generate GeoJSON
+        run: python generate_all_geojson.py
 
-    - name: Commit & Push
-      run: |
-        git config --global user.name "github-actions"
-        git config --global user.email "github-actions@github.com"
-        git add output/*.geojson
-        git commit -m "Automatic update" || echo "No changes"
-        git push
+      - name: Commit files
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add output/*.geojson
+          git commit -m "Auto update" || echo "No changes"
+          git push
