--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,36 +1,33 @@
-name: Update Satellite GeoJSON
+name: Auto update
 
 on:
   schedule:
-    - cron: "0 * * * *"   # every hour
+    - cron: "*/20 * * * *"  # every 20 minutes
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  build:
+  update:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.10
 
-      - name: Install dependencies
-        run: pip install sgp4 requests
+    - name: Install dependencies
+      run: pip install sgp4 requests
 
-      - name: Generate GeoJSON
-        run: python generate_all_geojson.py
+    - name: Generate GeoJSON
+      run: python generate_all_geojson.py
 
-      - name: Commit files
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add output/*.geojson
-          git commit -m "Auto update" || echo "No changes"
-          git push
+    - name: Commit and push
+      run: |
+        git config --global user.email "actions@github.com"
+        git config --global user.name "actions-user"
+        git add output/*.geojson
+        git commit -m "Auto update"
+        git push
+
