--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,8 @@
-name: Auto update
+name: Auto update satellite GeoJSON
 
 on:
   schedule:
-    - cron: "*/20 * * * *"  # every 20 minutes
+    - cron: "*/20 * * * *"   # every 20 minutes
   workflow_dispatch:
 
 jobs:
@@ -10,24 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: "3.10"   # ✅ FIXED — use 3.10, NOT 3.1
 
     - name: Install dependencies
-      run: pip install sgp4 requests
+      run: |
+        pip install sgp4 requests
 
     - name: Generate GeoJSON
       run: python generate_all_geojson.py
 
-    - name: Commit and push
+    - name: Commit and push updates
       run: |
-        git config --global user.email "actions@github.com"
-        git config --global user.name "actions-user"
-        git add output/*.geojson
-        git commit -m "Auto update"
+        git config --global user.email "github-actions@github.com"
+        git config --global user.name "github-actions"
+        git add output/*.geojson || true
+        git commit -m "Auto update satellite data" || echo "No changes"
         git push
-
