--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Auto update satellite GeoJSON
 
 on:
   schedule:
-    - cron: "*/20 * * * *"   # every 20 minutes
+    - cron: "*/20 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,22 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"   # ✅ FIXED — use 3.10, NOT 3.1
+        python-version: "3.10"
 
     - name: Install dependencies
-      run: |
-        pip install sgp4 requests
+      run: pip install sgp4 requests
 
     - name: Generate GeoJSON
       run: python generate_all_geojson.py
 
-    - name: Commit and push updates
+    - name: Commit and push
       run: |
         git config --global user.email "github-actions@github.com"
         git config --global user.name "github-actions"
