--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,12 +1,12 @@
-name: Auto update satellite GeoJSON
+name: Update Live Satellite GeoJSON
 
 on:
   schedule:
-    - cron: "*/20 * * * *"
+    - cron: "*/10 * * * *"
   workflow_dispatch:
 
 jobs:
-  update:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,16 +17,17 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Install dependencies
-      run: pip install sgp4 requests
+    - name: Install Requirements
+      run: |
+        pip install sgp4 requests
 
     - name: Generate GeoJSON
       run: python generate_all_geojson.py
 
-    - name: Commit and push
+    - name: Commit and Push
       run: |
-        git config --global user.email "github-actions@github.com"
         git config --global user.name "github-actions"
-        git add output/*.geojson || true
-        git commit -m "Auto update satellite data" || echo "No changes"
+        git config --global user.email "actions@github.com"
+        git add output/*.geojson
+        git commit -m "Auto update live satellite geojson" || echo "No changes"
         git push
