--- a/.github/workflows/flatten-only.yml
+++ b/.github/workflows/flatten-only.yml
@@ -1,1 +1,33 @@
 
+name: Flatten Existing GeoJSON
+
+on:
+  workflow_dispatch:   # Manual trigger
+  schedule:
+    - cron: "0 * * * *"   # Every hour (optional)
+
+jobs:
+  flatten:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Run Flatten Script
+        run: |
+          python flatten_geojson.py
+
+      - name: Commit Flattened Files
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+
+          git add flattened/*.geojson || echo "No files to add"
+          git commit -m "Updated flattened GeoJSON files" || echo "No changes"
+          git push || echo "Nothing to push"
