Update GitHub Actions workflow for GeoJSON flattening

--- a/Live_Satelite_Data/.github/workflows/flatten.yml
+++ b/Live_Satelite_Data/.github/workflows/flatten.yml
@@ -1,16 +1,16 @@
 name: Flatten GeoJSON Files
 
 on:
-  workflow_dispatch:    # allow manual run
-  schedule:
-    - cron: "25 * * * *"   # runs every hour at :25, after your main update
+  repository_dispatch:
+    types: [run-flatten]     # auto-triggered by update workflow
+  workflow_dispatch:          # manual button
 
 jobs:
   flatten:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repo
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -18,14 +18,16 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Run flatten script
+      - name: Run flattener
         run: |
           python flatten_geojson.py
 
-      - name: Commit and Push flattened files
+      - name: Commit flattened files
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "actions-user"
+
           git add flattened/*.geojson || true
-          git commit -m "Update flattened GeoJSON" || true
-          git push
+          git commit -m "Updated flattened GeoJSON" || true
+          git push || true
+
